feat(api/applications): extend document properties returned by apis (BOAS-726)
